--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,45 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    background-color: rgb(19, 18, 18);
+    color: rgb(255, 255, 255);
+}
+
+input, button {
+    outline: none;
+}
+
+input {
+    border: none;
+    padding: 4px;
+    border-radius: 2px;
+}
+
+#ShowPassword {
+    padding-left: 2px;
+}
+
+#suggest-passwords-button {
+    color: white;
+    margin-left: 34px;
+    border: none;
+    border-radius: 4px;
+    padding: 7px;
+    padding-right: 15px;
+    padding-left: 15px;
+    cursor: pointer;
+    background-color: rgb(0, 110, 255);
+}
+
+#add-button {
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    padding: 7px;
+    padding-right: 15px;
+    padding-left: 15px;
+    border: none;
+    border-radius: 4px;
+    background-color: rgb(73, 230, 81);
+}
