--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,10 @@ input {
     background-color: rgb(0, 110, 255);
 }
 
+#suggest-passwords-button:hover {
+    background-color: rgb(9, 98, 216);
+}
+
 #add-button {
     color: rgb(255, 255, 255);
     cursor: pointer;
@@ -43,4 +47,8 @@ input {
     border: none;
     border-radius: 4px;
     background-color: rgb(73, 230, 81);
+}
+
+#add-button:hover {
+    background-color: rgb(67, 211, 75);
 }
